# K210_AI_V7s_Plus_Boot

./: .gitignore  CMakeLists.txt  README.md  bootstrap_from_app.bat  build_boot.bat  build_boot_fast.bat  build_boot_v2.bat  flash_boot.bat  flash_boot_recovery.bat  flash_boot_slot_probe.bat  full_recovery_app_boot_test.bat  monitor_boot.bat  pack_dma32_slot.bat  quick_app_boot_test.bat  quick_boot_cmd_test.bat  quick_boot_spi_iter.bat  quick_boot_spi_test.bat  sd_boot_debug.bat  test_slot0_app_boot.bat  uart_file_to_sd.bat
build_v2/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  k210_boot_v2
build_v2/bsp/: Makefile  cmake_install.cmake
build_v2/drivers/: Makefile  cmake_install.cmake
build_v2/freertos/: Makefile  cmake_install.cmake
build_v2/hal/: Makefile  cmake_install.cmake
firmware_v2/: CMakeLists.txt  jump.S  main.c  newlib_locks.c  startup.S
src/: boot_cmd.c  boot_cmd.h  boot_config.h  boot_decision.c  boot_decision.h  boot_flash.c  boot_flash.h  boot_jump.S  boot_runtime.c  boot_sdk_init.cpp  boot_spi3_rw.c  boot_update.c  boot_update.h  decision_dummy.c  main.c  newlib_lock_stubs.c
tools/: baud_scan.py  boot_cmd_sd_debug.py  boot_cmd_smoke.py  boot_monitor.py  make_raw_kfpkg.py  pack_dma32_slot.py  patch_boot_sdk.py  patch_boot_sdk_dma.py  patch_boot_spi3_tx.py  run_color_build.py  write_thin_cmake.py
